--- a/index.html
+++ b/index.html
@@ -6,30 +6,8 @@
     <title>SWITCH</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<style>
-    header img{
-        width: 300px;
-    }
-    input{
-        text-transform: uppercase;
-    }
-    #res{
-        font-size: 16px;
-        text-align: center;
-        color: black;
-        font-weight: bold;
-       
-    }
-    #res2{
-        font-size: 16px;
-        text-align: center;
-        color: black;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
-
-</style>
 <body>
    <header class=" bg-success p-3 text-white">
     <div class="container">
