--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <br>
             <input class="form-control" type="text"id="txtt2" placeholder="Digite seu nome">
             <br>
-            <input class="btn btn-success mb-3" type="button" onclick="verificar()" value="verificar">
+            <input class="btn btn-primary mb-3" type="button" onclick="verificar()" value="verificar">
             <br>
             <div id="res2">
             </div>   
